style.css
@-moz-document url-prefix("https://www.spigotmc.org") {
body {
    background-color: #4E4E4E;
    color: #ffffff;
}
.quickReply,
.messageList .message {
    background-color: #717171;
}
.mainContainer_noSidebar,
.message .dark_postrating.likesSummary,
.dark_postrating,
.messageUserBlock .extraUserInfo,
.messageUserBlock div.avatarHolder,
.messageUserBlock h3.userText {
    background-color: #5F5D5D;
}
body .muted,
body a.muted,
body .muted a,
.message .signature,
.messageUserBlock a.username {
    color: rgb(187, 187, 187);
}
.discussionList .discussionListItem.sticky {
    background-color: rgb(119, 119, 119);
}
.discussionListItem:nth-child(even) {
    background-color: #A7A7A7;
}
.discussionListItem {
    background-color: rgb(130, 128, 128);
}
body .muted,
body a.muted,
body .muted a,
.message .signature,
.messageUserBlock a.username {
    color: rgb(212, 212, 212);
}
.username .style4 {
    color: #01C701;
}
.username .style6 {
    color: #C500C5;
}
#pageDescription {
    color: rgb(179, 179, 179);
}
.bbCodeQuote .attribution,
.bbCodeBlock .type {
    background-color: #949292;
    color: black;
}
.bbCodeQuote .quoteContainer {
    background-color: rgb(181, 181, 181);
    color: black;
}
.bbCodeBlock .code {
    color: black;
}
.nodeList .node.level_2:nth-child(even) .nodeInfo,
.nodeList .node.level_2:nth-child(even) .nodeInfo .nodeLastPost {
    background: rgb(202, 202, 202);
}
.node.level_2 .nodeInfo {
    background-color: #A2A2A2;
}
.discussionListItems .unread .title a,
.discussionListItems .unread .lastPostInfo .username {
    color: #0340B7;
}
a:link,
a:visited {
    color: #0042C5;
}
.sectionMain {
    background-color: rgb(140, 140, 140);
}
.subHeading,
.primaryContent,
.sectionFooter {
    background-color: rgb(133, 133, 133);
}
.mainContainer .mainContent,
.mainContainer_noSidebar {
    background-color: #5F5F5F;
}
.Menu .secondaryContent,
.Menu .sectionFooter,
.Menu .primaryContent {
    background-color: rgb(154, 154, 154);
}
.navPopup .PopupItemLinkActive:hover {
    background-color: rgb(175, 175, 175);
}
.secondaryContent {
    background-color: #807B7B;
}
.pairs dt,
.pairsInline dt,
.pairsRows dt,
.pairsColumns dt,
.pairsJustified dt {
    color: rgb(210, 210, 210);
}
.nodeList .categoryStrip {
    background-color: rgb(105, 105, 105);
}
.nodeList .categoryStrip .nodeTitle a {
    color: rgb(255, 255, 255);
}
.node .nodeLastPost {
    background-color: #868686;
}
.nodeList .node.level_2:nth-child(even) .nodeInfo .nodeLastPost {
    background-color: #868686;
}

.bbCodeSpoilerText{
    color: BLACK;
}
}

